tarpc/tests/compile_fail/no_serde1/no_explicit_serde_without_feature.rs
#[tarpc::service(derive_serde = true)]
trait Foo {
    async fn foo();
}

fn main() {
    let x = FooRequest::Foo {};
    x.serialize();
}
